# UR10VoxelGrid

./: .gitignore  package.xml
action/: ModelControl.action  RobotControl.action  SimControl.action
config/: link_mapping.xml
docker/: Dockerfile  bashrc
docs/: Doxyfile  Doxyfile.in
docs/doxygen_generated/html/: VoxelGrid-example.html  annotated.html  classBox-members.html  classBox.html  classCatch_1_1BinaryExpr-members.html  classCatch_1_1BinaryExpr.html  classCatch_1_1BinaryExpr__coll__graph.map  classCatch_1_1Capturer__coll__graph.map  classCatch_1_1Detail_1_1Approx-members.html  classCatch_1_1Detail_1_1Approx.html  classCatch_1_1ExceptionTranslatorRegistrar.html  classCatch_1_1ExceptionTranslatorRegistrar_1_1ExceptionTranslator.html  classCatch_1_1ExprLhs-members.html  classCatch_1_1ExprLhs.html  classCatch_1_1GeneratorException-members.html  classCatch_1_1GeneratorException.html  classCatch_1_1Generators_1_1ChunkGenerator__coll__graph.map  classCatch_1_1Generators_1_1ChunkGenerator__inherit__graph.md5  classCatch_1_1Generators_1_1FilterGenerator__coll__graph.map  classCatch_1_1Generators_1_1GeneratorUntypedBase-members.html  classCatch_1_1Generators_1_1GeneratorUntypedBase.html  classCatch_1_1Generators_1_1GeneratorUntypedBase__inherit__graph.map  classCatch_1_1Generators_1_1GeneratorUntypedBase__inherit__graph.md5  classCatch_1_1Generators_1_1GeneratorWrapper-members.html  classCatch_1_1Generators_1_1Generators__coll__graph.md5  classCatch_1_1Generators_1_1Generators__inherit__graph.map  classCatch_1_1Generators_1_1MapGenerator.html  classCatch_1_1Generators_1_1MapGenerator__coll__graph.map  classCatch_1_1Generators_1_1MapGenerator__inherit__graph.md5  classCatch_1_1Generators_1_1RandomFloatingGenerator-members.html  classCatch_1_1Generators_1_1RandomFloatingGenerator.html  classCatch_1_1Generators_1_1RandomIntegerGenerator-members.html  classCatch_1_1Generators_1_1RandomIntegerGenerator.html  classCatch_1_1Generators_1_1RandomIntegerGenerator__inherit__graph.md5  classCatch_1_1Generators_1_1RangeGenerator.html  classCatch_1_1Generators_1_1RangeGenerator__inherit__graph.map  classCatch_1_1Generators_1_1RepeatGenerator-members.html  classCatch_1_1Generators_1_1RepeatGenerator__coll__graph.md5  classCatch_1_1Generators_1_1SingleValueGenerator-members.html  classCatch_1_1Generators_1_1SingleValueGenerator__inherit__graph.map  (+277 more)
include/: robot_utils.hpp  ros_robot_controller.hpp  ros_robot_interface.hpp  voxel_grid_plugin.hpp
launch/: custom_empty_world.launch  custom_ur5.launch  custom_ur5_upload.launch
models/: obstacle_box_large.sdf
scripts/: pyros_interface.py
src/: pygazebo.cpp  ros_robot_controller.cpp
tests/: box_face_test.cpp  ros_controller_test.cpp
urdf/: table.urdf.xacro  ur5.urdf.xacro
voxel_grid_plugin/: CMakeLists.txt
voxel_grid_plugin/action/: VoxelGrid.action
voxel_grid_plugin/docs/doxygen_generated/html/: ROSControllerTest-example.html  ROSRobotController-example.html  VoxelGridTest-example.html  catch_8hpp_source.html  classCatch_1_1AssertionHandler-members.html  classCatch_1_1AssertionHandler.html  classCatch_1_1AssertionHandler__coll__graph.map  classCatch_1_1BinaryExpr__inherit__graph.map  classCatch_1_1Capturer-members.html  classCatch_1_1Capturer.html  classCatch_1_1Detail_1_1IsStreamInsertable-members.html  classCatch_1_1Detail_1_1IsStreamInsertable.html  classCatch_1_1ExceptionTranslatorRegistrar-members.html  classCatch_1_1ExceptionTranslatorRegistrar_1_1ExceptionTranslator-members.html  classCatch_1_1ExceptionTranslatorRegistrar_1_1ExceptionTranslator__coll__graph.map  classCatch_1_1GeneratorException__inherit__graph.md5  classCatch_1_1Generators_1_1ChunkGenerator-members.html  classCatch_1_1Generators_1_1ChunkGenerator.html  classCatch_1_1Generators_1_1FilterGenerator-members.html  classCatch_1_1Generators_1_1FilterGenerator.html  classCatch_1_1Generators_1_1FilterGenerator__coll__graph.md5  classCatch_1_1Generators_1_1FixedValuesGenerator-members.html  classCatch_1_1Generators_1_1FixedValuesGenerator.html  classCatch_1_1Generators_1_1FixedValuesGenerator__inherit__graph.map  classCatch_1_1Generators_1_1FixedValuesGenerator__inherit__graph.md5  classCatch_1_1Generators_1_1GeneratorWrapper.html  classCatch_1_1Generators_1_1Generators-members.html  classCatch_1_1Generators_1_1Generators.html  classCatch_1_1Generators_1_1MapGenerator-members.html  classCatch_1_1Generators_1_1MapGenerator__coll__graph.md5  classCatch_1_1Generators_1_1MapGenerator__inherit__graph.map  classCatch_1_1Generators_1_1RandomFloatingGenerator__coll__graph.md5  classCatch_1_1Generators_1_1RandomFloatingGenerator__inherit__graph.map  classCatch_1_1Generators_1_1RandomIntegerGenerator__coll__graph.map  classCatch_1_1Generators_1_1RangeGenerator-members.html  classCatch_1_1Generators_1_1RangeGenerator__coll__graph.md5  classCatch_1_1Generators_1_1RepeatGenerator.html  classCatch_1_1Generators_1_1RepeatGenerator__coll__graph.map  classCatch_1_1Generators_1_1SingleValueGenerator.html  classCatch_1_1Generators_1_1TakeGenerator.html  (+279 more)
voxel_grid_plugin/docs/doxygen_generated/html/search/: all_13.js  all_16.js  all_4.js  all_5.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_12.js  classes_a.js  classes_f.js  functions_0.js  functions_10.js  functions_5.js  functions_6.js  functions_9.js  functions_e.js  namespaces_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_9.js  variables_b.js  variables_d.js  variables_e.js  variables_f.js
voxel_grid_plugin/include/: imports.hpp  logger.hpp  pygazebo.hpp  voxel_grid.hpp
voxel_grid_plugin/launch/: custom_controller_utils.launch
voxel_grid_plugin/models/: obstacle_box_med.sdf  obstacle_box_small.sdf
voxel_grid_plugin/msg/: VoxelData.msg
voxel_grid_plugin/msg/proto/: robot_control_request.proto
voxel_grid_plugin/src/: ros_robot_interface.cpp  voxel_grid.cpp  voxel_grid_plugin.cpp
voxel_grid_plugin/tests/: rotation_test.cpp  voxel_grid_test.cpp
voxel_grid_plugin/urdf/: ur5_robot.urdf.xacro
worlds/: custom_empty.world  custom_empty.world.in
(+36 files in other folders)
