<package format="2">
    <name>voxel_grid_plugin</name>
    <version>1.0.0</version>
    <description>
        Gazebo world to voxel grid converter
    </description>
    <maintainer email="ganguk@amazon.com">Kanishka Ganguly</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <!--Build Dependencies-->
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>gazebo_plugins</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>

    <!--Run Dependencies-->
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>roscpp</exec_depend>

    <!--Export Gazebo plugin as shared library-->
    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>